[package]
name = "sav1n"
version = "0.1.0"
authors = ["cogma"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jemallocator = "^0.3"
tokio = { version="^1", features=["io-std", "fs", "io-util", "time", "process", "macros", "rt-multi-thread", "sync"] }
clap = "^3.0.0-beta.4"
regex = "^1"
lazy_static = "^1"
serde_json = "^1"

[profile.release]
opt-level = 3