[package]
name = "sav1n"
version = "0.1.0"
authors = ["cogma"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mimalloc = {  version = "*" }
tokio = { version="^1", features=["io-std", "fs", "io-util", "time", "process", "macros", "rt-multi-thread", "sync"] }
clap = "^3"
regex = "^1"
lazy_static = "^1"
serde_json = "^1"
glob = "^0.3"
libmimalloc-sys = { version = "^0.1", features = ["extended"] }

[profile.release]
opt-level = 3